fixed tooltips box width and sankey overlap

--- a/src/style.css
+++ b/src/style.css
@@ -269,6 +269,7 @@ body::-webkit-scrollbar-thumb {
     opacity: 0;
     transition: opacity 0.2s;
     pointer-events: none;
+    white-space: nowrap;
 }
 
 #movieSidebar {
